[package]
name = "multicall-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
once_cell = "1.14.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
